# ecommerce-pdp-recommender

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
configs/: default.yaml  smoke.yaml
scripts/: run_pipeline.py
src/ecommerce_rec/: __init__.py  cli.py  config.py
src/ecommerce_rec/data/: __init__.py  generate.py
src/ecommerce_rec/ranking/: __init__.py  evaluate.py  features.py  train.py
src/ecommerce_rec/retrieval/: __init__.py  faiss_index.py  model.py  train.py
src/ecommerce_rec/serving/: __init__.py
tests/: test_data.py
