[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ecommerce-pdp-recommender"
version = "1.0.0"
description = "Two-stage PDP recommender: Two-Tower retrieval + LightGBM LambdaRank (e-commerce PDP)"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Avinash Pradhan" }]
dependencies = [
  "torch>=2.1,<3",
  "numpy>=1.24,<3",
  "pandas>=2.0,<3",
  "pyarrow>=14.0,<20",
  "scipy>=1.11,<2",
  "scikit-learn>=1.3,<2",
  "lightgbm>=4.3,<5",
  "faiss-cpu>=1.7.4,<2",
  "pyyaml>=6.0,<7",
  "tqdm>=4.66,<5",
]

[project.optional-dependencies]
dev = ["pytest>=7.4,<9"]

[project.scripts]
ecommerce-rec = "ecommerce_rec.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
